--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,7 +34,7 @@ jobs:
           cp -R public/* ${GITHUB_WORKSPACE}/built-site/
           cd ${GITHUB_WORKSPACE}/built-site
           git add .
-          git config user.name 'dduyanhhoang'
-          git config user.email 'dduyanhhoang@gmail.com'
-          git commit -m 'chore: Updated site'
+          git config user.name 'dhij'
+          git config user.email 'davidhwang.ij@gmail.com'
+          git commit -m 'Updated site'
           git push          
